Changes to index.html and style.css

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <title>Pink Coffee Shop</title>
 </head>
 <body>
-    <hi>Welcome to the Pink Coffee Shop!</hi>
+    <h1>Welcome to the Pink Coffee Shop!</h1>
 </body>
 </html>
