--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <title>Pink Coffee Shop</title>
 </head>
 <body>
+    <div class="topnav">
+        <a class="active" href="#home">Home</a>
+        <a href="#menu">Menu</a>
+        <a href="#about">About</a>
+        <a href="#quiz">Quiz</a>
+        <a href="#contact">Contact</a>
+      </div>
     <h1>Welcome to the Pink Coffee Shop!</h1>
 </body>
 </html>
