--- a/index.html
+++ b/index.html
@@ -5,16 +5,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pink Coffee Shop</title>
+    <title>KAPF Hot Sauce</title>
 </head>
 <body>
-    <div class="topnav">
-        <a class="active" href="#home">Home</a>
-        <a href="#menu">Menu</a>
-        <a href="#about">About</a>
-        <a href="#quiz">Quiz</a>
-        <a href="#contact">Contact</a>
-      </div>
-    <h1>Welcome to the Pink Coffee Shop!</h1>
+    <nav title="navbar" class="navbar">
+        <!-- LOGO -->
+        <div class="logo">KAPF</div>
+        <!-- NAVIGATION MENU -->
+        <ul class="nav-links">
+            <!-- USING CHECKBOX HACK -->
+            <input type="checkbox" id="checkbox_toggle" />
+            <label for="checkbox_toggle" class="hamburger">&#9776;</label>
+            <!-- NAVIGATION MENUS -->
+            <div class="menu">
+                <li><a href="/">Home</a></li>
+                <li><a href="/">About Us</a></li>
+                <li><a href="/">Menu</a></li>
+            </div>
+        </ul>
+    </nav>
+
+    <h1>HOT SAUCE HEADLINE</h1>
+    <p>This is body copy text.</p>
+
+    <h1>ABOUT US</h1>
+    <p>This is body copy text.</p>
+
+    <h1>MENU</h1>
+    <p>This is body copy text.</p>
+
 </body>
 </html>
