Added updates to index.html, style.css, and image files

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>KAPF Hot Sauce</title>
 </head>
 <body>
+    <header>
     <nav title="navbar" class="navbar">
         <!-- LOGO -->
         <div class="logo">KAPF</div>
@@ -24,15 +25,32 @@
             </div>
         </ul>
     </nav>
+    </header>
 
-    <h1>HOT SAUCE HEADLINE</h1>
-    <p>This is body copy text.</p>
+    <main>
+        <article class="intro-area">
+                <h1 class="h1-hero-headline">HOT SAUCE HEADLINE</h1>
+                <div class="button-wrapper hero-cta">
+                    <a href="https://google.com"> TURN UP THE HEAT</a>
+                </div>
+        </article>
 
-    <h1>ABOUT US</h1>
-    <p>This is body copy text.</p>
+    <article class="about-us-section">
+        <h1>ABOUT US</h1>
+        <img src="/images/fernando-andrade-kyZ2WhdSuYs-unsplash copy.jpg" class="hand-pepper" alt="Hand holding a pepper">
+        <p>This is body copy text.</p>
+    </article>
+    
+    <article class="menu-section">
+        <h1>MENU</h1>
+        <p>This is body copy text.</p>
+    </article>
 
-    <h1>MENU</h1>
-    <p>This is body copy text.</p>
+    </main>
+
+   <footer>
+
+   </footer>
 
 </body>
 </html>
