Trying to fix the intro image

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 
     <main>
         <article class="intro-area">
-                <h1 class="h1-hero-headline">HOT SAUCE HEADLINE</h1>
+            <img src="/images/HotSauce1_150dpi.jpg" class="intro-image" alt="Hot sauce bottle laying on napkins surrounded by peppers">    
+            <h1 class="h1-hero-headline">HOT SAUCE HEADLINE</h1>
                 <div class="button-wrapper hero-cta">
                     <a href="https://google.com"> TURN UP THE HEAT</a>
                 </div>
