--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <li class="item"><a href="#">Home</a></li>
             <li class="item"><a href="#">About Us</a></li>
             <li class="item"><a href="#">Menu</a></li>
+            <li class="item"><a href="#">Contact Us</a></li>
             <li class="toggle"><a href="#"><i class="fas fa-bars"></i></a></li>
         </ul>
     </nav>
@@ -81,7 +82,9 @@
     </main>
 
    <footer>
-    Links??
+    <ul class="footer">
+        <li class="foot"><a href='#'>Contact Us</a></li>
+    </ul>
    </footer>
 
    <script src="main.js"></script>
