Fixed issues with file paths

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <main>
         <article class="intro-area">
             <div class="intro-fix">
-            <img src="/images/HotSauce1_150dpi_crop.jpg" class="intro-image" alt="Hot sauce bottle laying on napkins surrounded by peppers">
+            <img src="images/HotSauce1_150dpi_crop.jpg" class="intro-image" alt="Hot sauce bottle laying on napkins surrounded by peppers">
             <h1 class="h1-hero-headline">KAPF HOT SAUCE</h1>
                 <div class="button-wrapper hero-cta">
                     <a href="#"> TURN UP THE HEAT</a>
@@ -34,7 +34,7 @@
 
     <article class="about-us-section">
         <h1 class="about-us">ABOUT US</h1>
-        <img src="/images/fernando-andrade-kyZ2WhdSuYs-unsplash copy.jpg" class="hand-pepper" alt="Hand holding a pepper">
+        <img src="images/fernando-andrade-kyZ2WhdSuYs-unsplash copy.jpg" class="hand-pepper" alt="Hand holding a pepper">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
             incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
             exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
@@ -48,14 +48,14 @@
         <button class="accordion">HOT SAUCES</button>
         <div class="panel">
             <p>
-                <img src="/images/HotSauce3_150dpi.jpg" class="strain13" alt="Picture of Strain 13 hot sauce">
+                <img src="images/HotSauce3_150dpi.jpg" class="strain13" alt="Picture of Strain 13 hot sauce">
                 <h1>STRAIN 13</h1>
                 <p>Lorem ipsum dolor sit amet. Qui omnis ratione 33 tempore perferendis non rerum 
                     omnis est fuga doloremque est placeat harum sed incidunt adipisci! 
                 </p>
                 <h3>$14.99</h3><br><br>
                 
-                <img src="/images/sticker-mule-Jii9XIDjyJ4-unsplash copy.jpg" class="mulesauce" alt="Picture of Mule Sauce hot sauce">
+                <img src="images/sticker-mule-Jii9XIDjyJ4-unsplash copy.jpg" class="mulesauce" alt="Picture of Mule Sauce hot sauce">
                 <h1>MULE SAUCE</h1>
                 <p>Lorem ipsum dolor sit amet. Qui omnis ratione 33 tempore perferendis non rerum 
                     omnis est fuga doloremque est placeat harum sed incidunt adipisci! 
