Final updates! Ready to grade.

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <header>
         <ul class="menu">
             <li class="logo"><a href="#">KAPF</a></li>
-            <li class="item"><a href="#">Home</a></li>
-            <li class="item"><a href="#">About Us</a></li>
-            <li class="item"><a href="#">Menu</a></li>
-            <li class="item"><a href="#">Contact Us</a></li>
+            <li class="list"><a href="#">Home</a></li>
+            <li class="list"><a href="#">About Us</a></li>
+            <li class="list"><a href="#">Menu</a></li>
+            <li class="list"><a href="#">Contact Us</a></li>
             <li class="toggle"><a href="#"><i class="fas fa-bars"></i></a></li>
         </ul>
     </nav>
